<resources>
    <string name="app_name" translatable="false">project_f104774</string>
    <string name="add_review">Add Review</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="summary">Summary</string>
    <string name="rate_1_5">Rate (1-5)</string>
    <string name="save_review">Save Review</string>
    <string name="search_by_title">Search by Title</string>
    <string name="search_by_author">Search by Author</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="rating">Rating</string>
    <string name="save">Save</string>
    <string name="your_books">Your books</string>
    <string name="add_book">Add book</string>
    <string name="book_reviews">Book Reviews</string>
    <string name="edit">Edit</string>
    <string name="start_music">Start Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="delete">Delete</string>
</resources>